--- a/inst/rmarkdown/templates/awesomecv/resources/awesome-cv.tex
+++ b/inst/rmarkdown/templates/awesomecv/resources/awesome-cv.tex
@@ -101,6 +101,9 @@ $endif$
 $if(twitter)$
 \twitter{$twitter$}
 $endif$
+$if(quote)$
+\quote{$quote$}
+$endif$
 
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
