--- a/inst/rmarkdown/templates/awesomecv/resources/awesome-cv.tex
+++ b/inst/rmarkdown/templates/awesomecv/resources/awesome-cv.tex
@@ -35,7 +35,7 @@
 $if(headcolor)$
 \definecolor{awesome}{HTML}{$headcolor$}
 $else$
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-emerald}
 $endif$
 
 % Colors for text
